cedar-lean/UnitTest/parser_tests/negative/reserved_word_cedar.cedar
permit(principal, action, resource) when { context.__cedar == true };
